--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Log your work!",
     "keywords": ["php","log","logs","library","package"],
     "homepage": "https://github.com/ShamanHead/php-logger",
-    "license": "GNU",
+    "license": "AGPL-3.0-or-later",
     "minimum-stability": "stable",
      "require": {
         "php": ">=7.2"
